# parfit

./: .goreleaser.yaml  CHANGELOG.md  CONTRIBUTING  Cargo.toml  LICENSE  README  RELEASES  dist-workspace.toml  release-plz.toml
.github/workflows/: ci.yml  mirror.yml  publish.yml  release.yml
src/: directives.rs  lang.rs  lib.rs  main.rs  options.rs  prefix.rs  reflow.rs  source.rs  walker.rs
tests/: block_comments.rs  examples.rs  integration.rs  markdown.rs  source.rs
